--- a/jflex/src/main/java/jflex/core/BUILD
+++ b/jflex/src/main/java/jflex/core/BUILD
@@ -15,6 +15,7 @@ java_library(
         "//jflex/src/main/java/jflex/io",
         "//jflex/src/main/java/jflex/l10n",
         "//jflex/src/main/java/jflex/logging",
+        "//jflex/src/main/java/jflex/option",
         "//jflex/src/main/java/jflex/performance",
         "//jflex/src/main/java/jflex/scanner",
         "//jflex/src/main/java/jflex/state",
