--- a/jflex/src/main/java/jflex/logging/BUILD
+++ b/jflex/src/main/java/jflex/logging/BUILD
@@ -8,6 +8,7 @@ java_library(
         "//jflex/src/main/java/jflex/env",
         "//jflex/src/main/java/jflex/exceptions",
         "//jflex/src/main/java/jflex/l10n",
+        "//jflex/src/main/java/jflex/option",
         "//jflex/src/main/java/jflex/performance",
     ],
 )
