--- a/jflex/src/main/java/jflex/logging/BUILD
+++ b/jflex/src/main/java/jflex/logging/BUILD
@@ -1,22 +1,16 @@
 java_library(
     name = "logging",
-    srcs = ["Out.java"],
+    srcs = [
+        "Out.java",
+        "StdOutWriter.java",
+    ],
     visibility = ["//jflex:visibility"],
     deps = [
-        ":stdout",
         "//jflex/src/main/java/jflex/base",
         "//jflex/src/main/java/jflex/env",
         "//jflex/src/main/java/jflex/exceptions",
         "//jflex/src/main/java/jflex/l10n",
         "//jflex/src/main/java/jflex/option",
         "//jflex/src/main/java/jflex/performance",
-    ],
-)
-
-java_library(
-    name = "stdout",
-    srcs = ["StdOutWriter.java"],
-    deps = [
-        "//jflex/src/main/java/jflex/env",
     ],
 )
