do not create char class entries for atBOL matching
The scanning engine is testing for newline on raw input characters without
translation through the char-class map, so there is no need for a separate
class in that case.

--- a/javatests/jflex/testcase/bol/BUILD
+++ b/javatests/jflex/testcase/bol/BUILD
@@ -7,11 +7,19 @@ jflex(
     outputs = ["BolScanner.java"],
 )
 
+jflex(
+    name = "gen_bol2_scanner",
+    srcs = ["bol2.flex"],
+    jflex_bin = "//jflex:jflex_bin",
+    outputs = ["Bol2Scanner.java"],
+)
+
 java_test(
     name = "BolTest",
     srcs = [
         "BolTest.java",
         "State.java",
+        ":gen_bol2_scanner",
         ":gen_bol_scanner",
     ],
     deps = [
