--- a/jflex/src/test/java/jflex/core/BUILD
+++ b/jflex/src/test/java/jflex/core/BUILD
@@ -23,8 +23,8 @@ java_test(
 )
 
 java_test(
-    name = "RegExpTests",
-    srcs = ["RegExpTests.java"],
+    name = "RegExpTest",
+    srcs = ["RegExpTest.java"],
     deps = [
         "//jflex/src/main/java/jflex/chars",
         "//jflex/src/main/java/jflex/core",
