Modularize build: charset, options (#657)
* Modularize build:
  - Move char classes related code from jflex.core to jflex.core.unicode
  - Move Out from jflex.core to jflex.logging
* Split OptionsUtils
* Improve assertion message in JflexTestRunner
* Call OptionUtils.setDefaultOptions() before invoking JFlex. Guarded by encoding which must be defined.
* call OptionUtils.setDefaults in ant task

--- a/jflex/src/main/java/jflex/anttask/BUILD
+++ b/jflex/src/main/java/jflex/anttask/BUILD
@@ -1,12 +1,13 @@
-package(default_visibility = ["//jflex:visibility"])
-
 java_library(
     name = "anttask",
     srcs = glob(["*.java"]),
+    visibility = ["//jflex:__subpackages__"],
     deps = [
         "//jflex/src/main/java/jflex/core",
         "//jflex/src/main/java/jflex/exceptions",
         "//jflex/src/main/java/jflex/generator",
+        "//jflex/src/main/java/jflex/logging",
+        "//jflex/src/main/java/jflex/option",
         "//third_party/org/apache/ant",
     ],
 )
