--- a/java/jflex/testing/testsuite/BUILD
+++ b/java/jflex/testing/testsuite/BUILD
@@ -1,4 +1,4 @@
-package(default_visibility = ["//visibility:public"])
+package(default_visibility = ["//jflex:visibility"])
 
 java_library(
     name = "testsuite",
@@ -13,6 +13,8 @@ java_library(
         "//java/jflex/util/javac",
         "//jflex",
         "//jflex/src/main/java/jflex/generator",
+        "//jflex/src/main/java/jflex/logging",
+        "//jflex/src/main/java/jflex/option",
         "//third_party/com/google/guava",
         "//third_party/com/google/truth",
         "//third_party/junit",
