--- a/jflex/src/main/java/jflex/logging/BUILD
+++ b/jflex/src/main/java/jflex/logging/BUILD
@@ -1,6 +1,15 @@
 java_library(
     name = "logging",
-    srcs = ["StdOutWriter.java"],
-    visibility = ["//jflex:__subpackages__"],
-    deps = [],
+    srcs = [
+        "Out.java",
+        "StdOutWriter.java",
+    ],
+    visibility = ["//jflex:visibility"],
+    deps = [
+        "//jflex/src/main/java/jflex/base",
+        "//jflex/src/main/java/jflex/exceptions",
+        "//jflex/src/main/java/jflex/l10n",
+        "//jflex/src/main/java/jflex/option",
+        "//jflex/src/main/java/jflex/performance",
+    ],
 )
