--- a/jflex/src/test/java/jflex/core/unicode/BUILD
+++ b/jflex/src/test/java/jflex/core/unicode/BUILD
@@ -1,23 +1,25 @@
 java_test(
-    name = "RegExpTest",
-    srcs = ["RegExpTest.java"],
+    name = "IntCharSetQuickcheck",
+    srcs = [
+        "IntCharSetGen.java",
+        "IntCharSetQuickcheck.java",
+    ],
     deps = [
         "//jflex/src/main/java/jflex/chars",
         "//jflex/src/main/java/jflex/core",
         "//jflex/src/main/java/jflex/core/unicode",
         "//third_party/com/google/truth",
+        "//third_party/com/pholser/quickcheck",
     ],
 )
 
 java_test(
-    name = "SkeletonTest",
-    srcs = ["SkeletonTest.java"],
-    data = [
-        "//jflex:resources",
-    ],
+    name = "IntCharSetTest",
+    srcs = ["IntCharSetTest.java"],
     deps = [
-        "//jflex:testing",
+        "//jflex/src/main/java/jflex/chars",
         "//jflex/src/main/java/jflex/core",
+        "//jflex/src/main/java/jflex/core/unicode",
         "//third_party/com/google/truth",
     ],
 )
