adjust bazel setup for refactor

--- a/jflex/src/test/java/jflex/core/unicode/BUILD
+++ b/jflex/src/test/java/jflex/core/unicode/BUILD
@@ -8,9 +8,11 @@ java_test(
         "//jflex/src/main/java/jflex/chars",
         "//jflex/src/main/java/jflex/core",
         "//jflex/src/main/java/jflex/core/unicode",
+        "//jflex/src/test/java/jflex/chars",
         "//third_party/com/google/truth",
         "//third_party/com/pholser/quickcheck",
     ],
+    timeout = "short",
 )
 
 java_test(
@@ -22,4 +24,5 @@ java_test(
         "//jflex/src/main/java/jflex/core/unicode",
         "//third_party/com/google/truth",
     ],
+    timeout = "short",
 )
