--- a/jflex/src/test/java/jflex/core/unicode/BUILD
+++ b/jflex/src/test/java/jflex/core/unicode/BUILD
@@ -1,5 +1,6 @@
 java_test(
     name = "IntCharSetQuickcheck",
+    timeout = "short",
     srcs = [
         "IntCharSetGen.java",
         "IntCharSetQuickcheck.java",
@@ -8,6 +9,7 @@ java_test(
         "//jflex/src/main/java/jflex/chars",
         "//jflex/src/main/java/jflex/core",
         "//jflex/src/main/java/jflex/core/unicode",
+        "//jflex/src/test/java/jflex/chars",
         "//third_party/com/google/truth",
         "//third_party/com/pholser/quickcheck",
     ],
@@ -15,6 +17,7 @@ java_test(
 
 java_test(
     name = "IntCharSetTest",
+    timeout = "short",
     srcs = ["IntCharSetTest.java"],
     deps = [
         "//jflex/src/main/java/jflex/chars",
