--- a/jflex/src/main/java/jflex/generator/BUILD
+++ b/jflex/src/main/java/jflex/generator/BUILD
@@ -13,5 +13,6 @@ java_library(
         "//jflex/src/main/java/jflex/option",
         "//jflex/src/main/java/jflex/performance",
         "//jflex/src/main/java/jflex/scanner",
+        "//third_party/com/google/guava",
     ],
 )
