--- a/jflex/src/main/java/jflex/core/BUILD
+++ b/jflex/src/main/java/jflex/core/BUILD
@@ -1,8 +1,13 @@
+load("@jflex_rules//cup:cup.bzl", "cup")
+load("@jflex_rules//jflex:jflex.bzl", "jflex")
+
+package(default_visibility = ["//visibility:public"])
+
 java_library(
     name = "core",
     srcs = glob(["*.java"]) + [
-        "//jflex:gen_parser",
-        "//jflex:gen_scanner",
+        ":gen_parser",
+        ":gen_scanner",
     ],
     visibility = ["//jflex:visibility"],
     deps = [
@@ -19,4 +24,21 @@ java_library(
         "//jflex/src/main/java/jflex/scanner",
         "//jflex/src/main/java/jflex/state",
     ],
+)
+
+# Use bootstrap version defined in @jflex_rules
+jflex(
+    name = "gen_scanner",
+    srcs = ["//jflex/src/main/jflex:LexScan.flex"],
+    outputs = ["LexScan.java"],
+    skeleton = "//jflex/src/main/jflex:skeleton.nested",
+)
+
+cup(
+    name = "gen_parser",
+    src = "//jflex/src/main/cup:LexParse.cup",
+    cup_bin = "@jflex_rules//cup:cup_bin",
+    interface = True,
+    parser = "LexParse",
+    symbols = "sym",
 )
