quickcheck tests for CharClasses

--- a/jflex/src/test/java/jflex/core/unicode/BUILD
+++ b/jflex/src/test/java/jflex/core/unicode/BUILD
@@ -1,4 +1,22 @@
 java_test(
+    name = "CharClassesQuickcheck",
+    timeout = "short",
+    srcs = [
+        "CharClassesGen.java",
+        "CharClassesQuickcheck.java",
+    ],
+    deps = [
+        "IntCharSetQuickcheck",
+        "//jflex/src/main/java/jflex/chars",
+        "//jflex/src/main/java/jflex/core",
+        "//jflex/src/main/java/jflex/core/unicode",
+        "//jflex/src/test/java/jflex/chars",
+        "//third_party/com/google/truth",
+        "//third_party/com/pholser/quickcheck",
+    ],
+)
+
+java_test(
     name = "IntCharSetQuickcheck",
     timeout = "short",
     srcs = [
