--- a/javatests/jflex/ucd_generator/scanner/BUILD
+++ b/javatests/jflex/ucd_generator/scanner/BUILD
@@ -3,7 +3,7 @@ java_test(
     srcs = ["UnicodeDataScannerTest.java"],
     data = ["//third_party/unicode:ucd_10"],
     deps = [
-        "//java/jflex/ucd_generator/scanner:ucs_scanners",
+        "//java/jflex/ucd_generator/scanner:ucd_scanners",
         "//java/jflex/ucd_generator/scanner:unicode_data",
         "//java/jflex/ucd_generator/ucd",
         "//third_party/com/google/guava",
