--- a/java/jflex/ucd_generator/scanner/BUILD
+++ b/java/jflex/ucd_generator/scanner/BUILD
@@ -7,6 +7,7 @@ java_library(
         "AbstractEnumeratedPropertyFileScanner.java",
         "AbstractPropertyAliasesScanner.java",
         "AbstractPropertyValueAliasesScanner.java",
+        "AbstractScriptExtensionsScanner.java",
         "AbstractUnicodeDataScanner.java",
         ":gen_ucd_scanners",
     ],
@@ -31,6 +32,7 @@ jflex(
         "EnumeratedPropertyFileScanner.java",
         "PropertyAliasesScanner.java",
         "PropertyValueAliasesScanner.java",
+        "ScriptExtensionsScanner.java",
         "UnicodeDataScanner.java",
     ],
     visibility = ["//java/jflex/ucd_generator:__subpackages__"],
