Restore old_minimize() in DeprecatedDfa.

--- a/jflex/src/main/java/jflex/core/BUILD
+++ b/jflex/src/main/java/jflex/core/BUILD
@@ -3,7 +3,10 @@ load("@jflex_rules//jflex:jflex.bzl", "jflex")
 
 package(default_visibility = ["//visibility:public"])
 
-SRCS_DEPRECATED_DFA = ["DeprecatedDfa.java"]
+SRCS_DEPRECATED_DFA = [
+    "DeprecatedDfa.java",
+    "StatePairList.java",
+]
 
 java_library(
     name = "core",
@@ -52,5 +55,11 @@ java_library(
     name = "deprecated_dfa",
     testonly = True,
     srcs = SRCS_DEPRECATED_DFA,
-    deps = [],
+    deps = [
+        ":core",
+        "//jflex/src/main/java/jflex/exceptions",
+        "//jflex/src/main/java/jflex/l10n",
+        "//jflex/src/main/java/jflex/logging",
+        "//jflex/src/main/java/jflex/option",
+    ],
 )
