--- a/javatests/jflex/core/BUILD
+++ b/javatests/jflex/core/BUILD
@@ -3,7 +3,8 @@ java_test(
     srcs = ["DfaTest.java"],
     deps = [
         "//jflex/src/main/java/jflex/core",
-        "//jflex/src/main/java/jflex/core:deprecated_dfa",
+        "//jflex/src/main/java/jflex/dfa",
+        "//jflex/src/main/java/jflex/dfa:deprecated_dfa",
         "//third_party/com/google/truth",
     ],
 )
