--- a/jflex/src/main/java/jflex/core/BUILD
+++ b/jflex/src/main/java/jflex/core/BUILD
@@ -30,6 +30,7 @@ java_library(
         "//jflex/src/main/java/jflex/option",
         "//jflex/src/main/java/jflex/performance",
         "//jflex/src/main/java/jflex/scanner",
+        "//jflex/src/main/java/jflex/skeleton",
         "//jflex/src/main/java/jflex/state",
     ],
 )
