--- a/jflex/src/test/resources/BUILD
+++ b/jflex/src/test/resources/BUILD
@@ -3,5 +3,5 @@ package(default_visibility = ["//jflex/src/test:__subpackages__"])
 filegroup(
     name = "resources",
     testonly = True,
-    srcs = glob(["*.java"]),
+    srcs = glob(["*/**"]),
 )
