Only show jflex modules in degraph.

--- a/scripts/degraph/dep-graph.cfg
+++ b/scripts/degraph/dep-graph.cfg
@@ -5,8 +5,8 @@
 classpath = bazel-bin/jflex/jflex_bin_deploy.jar
 output = /tmp/jflex-packages.graphml
 
-# Include all of JFlex
-#include = jflex.**
+# Include JFlex only
+include = jflex.**
 # Exclude Java SDK itself.
 exclude = java.**
 # Exclude generated classes
@@ -20,9 +20,4 @@ packages = {
   (java_cup).**
   jflex jflex.*
   jflex.(*).**
-}
-
-internalExternal = {
-  internal jflex.**
-  external **
 }
