--- a/jflex/src/main/java/jflex/BUILD.bazel
+++ b/jflex/src/main/java/jflex/BUILD.bazel
@@ -9,6 +9,7 @@ java_library(
         "//jflex/src/main/java/jflex/base",
         "//jflex/src/main/java/jflex/core",
         "//jflex/src/main/java/jflex/core/unicode",
+        "//jflex/src/main/java/jflex/dfa",
         "//jflex/src/main/java/jflex/exceptions",
         "//jflex/src/main/java/jflex/generator",
         "//jflex/src/main/java/jflex/gui",
