--- a/jflex/examples/cup-java/pom.xml
+++ b/jflex/examples/cup-java/pom.xml
@@ -69,6 +69,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
+        <version>3.2.0</version>
         <executions>
           <execution>
             <phase>package</phase>
