Adjust to defaults change in CupAntTask
The ant task used to have the same defaults as the command line, which is
"-locations" being off. Provide this manually for now, because the Location
mechanism requires the use of ComplexSymbolFactory. Fixes #384

--- a/jflex/examples/cup-interpreter/build.xml
+++ b/jflex/examples/cup-interpreter/build.xml
@@ -33,7 +33,7 @@
   </target>
 
   <target name="cup">
-    <cup srcfile="src/main/cup/parser.cup" interface="yes" destdir="antbuild"/>
+    <cup srcfile="src/main/cup/parser.cup" locations="no" interface="yes" destdir="antbuild"/>
   </target>
 
   <target name="clean">
