Replace dangerous file name test by unit test.
Having a file name with backslashes in the repository makes it uncheckoutable on Windows. Fixes #535.

--- a/jflex/src/test/java/jflex/generator/BUILD.bazel
+++ b/jflex/src/test/java/jflex/generator/BUILD.bazel
@@ -3,6 +3,7 @@ java_test(
     srcs = ["EmitterTest.java"],
     deps = [
         "//jflex/src/main/java/jflex/generator",
+        "//jflex/src/main/java/jflex/option",
         "//third_party/com/google/truth",
     ],
 )
