--- a/javatests/jflex/testcase/action_pipe/BUILD.bazel
+++ b/javatests/jflex/testcase/action_pipe/BUILD.bazel
@@ -1,22 +1,49 @@
-load("//testsuite:testsuite.bzl", "jflex_testsuite")
+load("@jflex_rules//jflex:jflex.bzl", "jflex")
 
-jflex_testsuite(
-    name = "ActionPipeEofTest",
-    srcs = ["ActionPipeEofTest.java"],
-    data = [
-        "action-pipe-eof.flex",
-    ],
-    deps = ["//jflex/src/main/java/jflex/exceptions"],
+jflex(
+    name = "action_pipe_eof_flex",
+    srcs = ["action-pipe-eof.flex"],
+    jflex_bin = "//jflex:jflex_bin",
+    outputs = ["ActionPipeEof.java"],
 )
 
-jflex_testsuite(
+java_library(
+    name = "action_pipe_eof_scanner",
+    srcs = [
+        ":action_pipe_eof_flex",
+    ],
+)
+
+java_test(
+    name = "ActionPipeEofTest",
+    srcs = ["ActionPipeEofTest.java"],
+    deps = [
+        ":action_pipe_eof_scanner",
+        "//java/jflex/util/scanner:scanner_factory",
+        "//third_party/com/google/truth",
+    ],
+)
+
+jflex(
+    name = "eof_pipe_action_flex",
+    srcs = ["eof-pipe-action.flex"],
+    jflex_bin = "//jflex:jflex_bin",
+    outputs = ["EofPipeAction.java"],
+)
+
+java_library(
+    name = "eof_pipe_action_scanner",
+    srcs = [
+        ":eof_pipe_action_flex",
+    ],
+)
+
+java_test(
     name = "EofPipeActionTest",
     srcs = ["EofPipeActionTest.java"],
-    data = [
-        "eof-pipe-action.flex",
-    ],
     deps = [
-        "//jflex/src/main/java/jflex/exceptions",
-        "//jflex/src/main/java/jflex/scanner",
+        ":eof_pipe_action_scanner",
+        "//java/jflex/util/scanner:scanner_factory",
+        "//third_party/com/google/truth",
     ],
 )
