make sure travis has optional ant packages installed

--- a/.travis.yml
+++ b/.travis.yml
@@ -61,6 +61,7 @@ matrix:
 # They cannot be deleted in the before_cache phase,
 # otherwise `mvn site` fails in the before_deploy phase.
 before_install:
+- sudo apt-get -y install ant-optional
 - ./scripts/clean.sh
 
 install:
