add standardised Makefile and ant build for all examples
 * standard target layout (as in README)
 * test shared between mvn and ant (as in `simple`, implemented by Régis)
 * diff test in Makefile
 * shared include files Makefile.inc, include.xml, and ivy.xml
 * remove references to paths outside release, so instructions will work
   there as well.
 * slight tweaks to examples for typos/sync with manual

--- a/jflex/examples/byaccj/Makefile
+++ b/jflex/examples/byaccj/Makefile
@@ -1,7 +1,6 @@
 # Be sure to use yacc/j ; not unix yacc nor bison.
 BYACCJ = yaccj -J
-ROOT       = ../../..
-JFLEX      = $(ROOT)/jflex/bin/jflex
+JFLEX  = ../../bin/jflex
 
 run: all
 	java -cp out Parser
