--- a/jflex/examples/cup-lcalc/Makefile
+++ b/jflex/examples/cup-lcalc/Makefile
@@ -7,17 +7,14 @@
 MAIN = Main
 
 # test data
-TEST_IN  = src/test/data/example.as
-OUT_GOOD = src/test/data/output.good
+TEST_IN  = src/test/resources/test.txt
+OUT_GOOD = src/test/resources/output.good
 
 # jflex input and output
-LEXER_IN = src/main/jflex/scanner.flex
+LEXER_IN = src/main/jflex/lcalc.flex
 LEXER_CLASS = Lexer
 
 # cup file
-PARSER_IN = src/main/cup/parser.cup
-
-# this parser wants its input on stdin:
-PIPE_INPUT = <
+PARSER_IN = src/main/cup/ycalc.cup
 
 include ../common/Makefile.inc
