--- a/jflex/examples/cup-java-minijava/pom.xml
+++ b/jflex/examples/cup-java-minijava/pom.xml
@@ -2,14 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.flex.examples</groupId>
-  <artifactId>cup-lcalc</artifactId>
+  <artifactId>cup-java-minijava</artifactId>
   <version>1.0</version>
-  <name>A scanner for ca alculator.</name>
-  <description>This
-    example comes from a short article series in the Linux Gazette
-    by Richard A. Sevenich and Christopher Lopes,
-    titled Compiler Construction Tools.</description>
+  <name>Example from the JFlex manual</name>
+  <description>The example lexer spec form the JFlex manual.</description>
   <dependencies>
+    <dependency>
+      <groupId>de.jflex</groupId>
+      <artifactId>cup_runtime</artifactId>
+      <version>11b-20160615</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -21,11 +23,6 @@
       <artifactId>truth</artifactId>
       <version>0.36</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>de.jflex</groupId>
-      <artifactId>cup_runtime</artifactId>
-      <version>11b-20160615</version>
     </dependency>
   </dependencies>
   <build>
@@ -63,37 +60,7 @@
               <goal>generate</goal>
             </goals>
             <configuration>
-            </configuration>
-          </execution>
-        </executions>
-        <configuration>
-          <!-- By default runs:
-          cup -destdir target/generated-sources/cup -parser parser -symbols sym src/main/cup/ycalc.cup -->
-        </configuration>
-      </plugin>
-      <!-- Build an Uberjar -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-shade-plugin</artifactId>
-        <version>3.2.0</version>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>shade</goal>
-            </goals>
-            <configuration>
-              <finalName>${project.artifactId}-full-${project.version}</finalName>
-              <transformers>
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>Main</mainClass>
-                </transformer>
-              </transformers>
-              <artifactSet>
-                <includes>
-                  <include>de.jflex:cup_runtime</include>
-                </includes>
-              </artifactSet>
+              <symbolInterface>true</symbolInterface>
             </configuration>
           </execution>
         </executions>
