--- a/jflex/examples/simple/pom.xml
+++ b/jflex/examples/simple/pom.xml
@@ -6,11 +6,11 @@
   <version>1.0</version>
   <name>A scanner for a toy programming language.</name>
   <description>It is the example from the JLex website with some small
-		modifications, to make it a bit more readable.
+        modifications, to make it a bit more readable.
 
-		It does nothing really useful, because there is no parser for
-		the toy programming language. It's just a demonstration how a
-		small simple scanner looks like.</description>
+        It does nothing really useful, because there is no parser for
+        the toy programming language. It's just a demonstration how a
+        small simple scanner looks like.</description>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -47,6 +47,18 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.2.0</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>Yylex</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
       </plugin>
     </plugins>
   </build>
