--- a/jflex/examples/standalone/pom.xml
+++ b/jflex/examples/standalone/pom.xml
@@ -12,7 +12,7 @@ of "hello" by "hello &lt;name&gt; !".</description>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.2</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -47,6 +47,18 @@ of "hello" by "hello &lt;name&gt; !".</description>
             </configuration>
           </execution>
         </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.2.0</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>de.jflex.example.standalone.Subst</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
       </plugin>
     </plugins>
   </build>
