--- a/benchmark/pom.xml
+++ b/benchmark/pom.xml
@@ -80,7 +80,7 @@
               <finalName>${project.artifactId}-full-${project.version}</finalName>
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>de.jflex.benchmark.JFlexBench</mainClass>
+                  <mainClass>org.openjdk.jmh.Main</mainClass>
                 </transformer>
               </transformers>
               <artifactSet>
