Save the jflex_deploy.jar build artifact in Cirrus CI

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -21,10 +21,15 @@ bazel_build_task:
   - bazel --bazelrc=.ci.bazelrc test  --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  //javatests/jflex/testcase/...
   test_all_script:
   - bazel --bazelrc=.ci.bazelrc test  --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  //...
+  build_artifact_script:
+  - bazel --bazelrc=.ci.bazelrc build --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  jflex/jflex_bin_deploy.jar
   junit_artifacts:
     path: "bazel-out/*/testlogs/**/test.xml"
     type: text/xml
     format: junit
+  store_artifacts:
+    path: "bazel-out/*/bin/jflex/jflex_bin_deploy.jar"
+    destination: artifact
 
 measure_coverage_task:
   name: Measure code coverage
@@ -53,7 +58,7 @@ steps:
   keys:
   - source-v1-{{ .Branch }}-{{ .Revision }}
   - source-v1-{{ .Branch }}-
-  - source-v1-
+  - source-v1--
 - checkout
 - git_cache:
   key: source-v1-{{ .Branch }}-{{ .Revision }}
