--- a/jflex/examples/standalone/pom.xml
+++ b/jflex/examples/standalone/pom.xml
@@ -4,6 +4,7 @@
   <groupId>de.flex.examples</groupId>
   <artifactId>standalone-maven</artifactId>
   <version>1.0</version>
+  <name>Standalone text substitution example</name>
   <description>This is a small example of a standalone text substitution scanner.
 
 It reads a name after the keyword name and replaces all occurrences
