--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,30 +4,37 @@
 buildtools_cache:
   folder: buildtools
 
+container:
+  image: l.gcr.io/google/bazel:1.2.1
+  memory: 5G
+
 bazel_build_task:
-  name: Bazel build and test
-  container:
-    image: l.gcr.io/google/bazel:1.2.1
-    memory: 5G
+  name: Bazel build
   bazel_version_script:
   - bazel --bazelrc=.ci.bazelrc info  --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  release
   build_script:
   - bazel --bazelrc=.ci.bazelrc build --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  //jflex
   build_all_script:
   - bazel --bazelrc=.ci.bazelrc build --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  //...
+
+bazel_test_task:
+  name: Bazel test
   test_script:
   - bazel --bazelrc=.ci.bazelrc test  --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  //jflex/...
   regression_tests_script:
   - bazel --bazelrc=.ci.bazelrc test  --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  //javatests/jflex/testcase/...
   test_all_script:
   - bazel --bazelrc=.ci.bazelrc test  --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  //...
-  build_artifact_script:
-  - bazel --bazelrc=.ci.bazelrc build --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  jflex/jflex_bin_deploy.jar
   junit_artifacts:
     path: "bazel-out/*/testlogs/**/test.xml"
     type: text/xml
     format: junit
-  jar_artifacts:
+
+bazel_artifact_task:
+  name: Bazel artifact
+  build_artifact_script:
+  - bazel --bazelrc=.ci.bazelrc build --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  jflex/jflex_bin_deploy.jar
+  binary_artifacts:
     path: "bazel-out/*/bin/jflex/jflex_bin_deploy.jar"
     destination: artifact
     type: application/java-archive
