--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -4,11 +4,12 @@
 buildtools_cache:
   folder: buildtools
 
-bazel_build_task:
+container:
+  image: l.gcr.io/google/bazel:1.2.1
+  memory: 5G
+
+bazel_build__test_task:
   name: Bazel build and test
-  container:
-    image: l.gcr.io/google/bazel:1.2.1
-    memory: 5G
   bazel_version_script:
   - bazel --bazelrc=.ci.bazelrc info  --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  release
   build_script:
@@ -21,10 +22,19 @@ bazel_build_task:
   - bazel --bazelrc=.ci.bazelrc test  --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  //javatests/jflex/testcase/...
   test_all_script:
   - bazel --bazelrc=.ci.bazelrc test  --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  //...
-  junit_artifacts:
-    path: "bazel-out/*/testlogs/**/test.xml"
-    type: text/xml
-    format: junit
+  always:
+    junit_artifacts:
+      path: "bazel-out/*/testlogs/**/test.xml"
+      type: text/xml
+      format: junit
+
+bazel_artifact_task:
+  name: Bazel artifact
+  build_artifact_script:
+  - bazel --bazelrc=.ci.bazelrc build --remote_http_cache=http://$CIRRUS_HTTP_CACHE_HOST  jflex/jflex_bin_deploy.jar
+  binary_artifacts:
+    path: "bazel-out/*/bin/jflex/jflex_bin_deploy.jar"
+    type: application/java-archive
 
 measure_coverage_task:
   name: Measure code coverage
@@ -53,7 +63,7 @@ steps:
   keys:
   - source-v1-{{ .Branch }}-{{ .Revision }}
   - source-v1-{{ .Branch }}-
-  - source-v1-
+  - source-v1--
 - checkout
 - git_cache:
   key: source-v1-{{ .Branch }}-{{ .Revision }}
