remove doclint for this release

--- a/pom.xml
+++ b/pom.xml
@@ -262,6 +262,7 @@
           <configuration>
             <!-- https://bugs.openjdk.java.net/browse/JDK-8212233 -->
             <source>8</source>
+            <doclint>none</doclint>
           </configuration>
         </plugin>
         <plugin>
