--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,6 +1,6 @@
 # Makefile for jflex documentation (ps + pdf + html)
 
-VERSION=1.8.0-SNAPSHOT
+VERSION=1.8.0
 RELEASE_DATE=26 February 2020
 UNICODE_VER=12.1
 
