--- a/jflex/pom.xml
+++ b/jflex/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>de.jflex</groupId>
     <artifactId>jflex-parent</artifactId>
-    <version>1.8.0-SNAPSHOT</version>
+    <version>1.8.0</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <name>JFlex</name>
