--- a/docs/Makefile
+++ b/docs/Makefile
@@ -1,6 +1,6 @@
 # Makefile for jflex documentation (ps + pdf + html)
 
-VERSION=1.8.0
+VERSION=1.8.1-SNAPSHOT
 RELEASE_DATE=26 February 2020
 UNICODE_VER=12.1
 
