--- a/jflex/examples/zero-reader/pom.xml
+++ b/jflex/examples/zero-reader/pom.xml
@@ -26,7 +26,7 @@
       <plugin>
         <groupId>de.jflex</groupId>
         <artifactId>jflex-maven-plugin</artifactId>
-        <version>1.8.0</version>
+        <version>1.8.1-SNAPSHOT</version>
         <executions>
           <execution>
             <goals>
